fixed extra space in side

--- a/front-gateway/src/components/ApartmentForm/UploadApartmentForm.scss
+++ b/front-gateway/src/components/ApartmentForm/UploadApartmentForm.scss
@@ -25,7 +25,6 @@
     margin-bottom: 30px;
     margin-right: -65px;
     margin-top: 15px;
-    width: 130%;
   }
 
   .checkbox {
